...
        <View className="gap-2">
          <View className="gap-2">
            <Text>
              <Text>Main Screens</Text>
            </Text>
            <Button onPress={() => router.push('/')}>
              <Text>Dashboard</Text>
            </Button>
            <Button onPress={() => router.push('/packs')}>
              <Text>Packs</Text>
            </Button>
            <Button onPress={() => router.push('/catalog')}>
              <Text>Catalog</Text>
            </Button>
          </View>
          <View className="gap-2">
...
