import { ListItem } from '@packrat/ui/src/list';
import { Text } from '@packrat/ui/src/text';
import { Icon } from 'expo-app/components/Icon';
import { useColorScheme } from 'expo-app/lib/hooks/useColorScheme';
import { useTranslation } from 'expo-app/lib/hooks/useTranslation';
import { type Href, useRouter } from 'expo-router';
import { Platform, View } from 'react-native';

export function AIChatTile() {
  const router = useRouter();
  const { t } = useTranslation();

  const route: Href = {
    pathname: '/ai-chat',
    params: {
      contextType: 'general',
    },
  };
  const handlePress = () => {
    router.push(route);
  };

  return (
    <ListItem
      className="ios:pl-0 pl-2"
      titleClassName="text-lg"
      leftView={
        <View className="px-3">
          <View className="h-6 w-6 items-center justify-center rounded-md bg-purple-500">
            <Icon name="message" size={15} color="white" />
          </View>
        </View>
      }
      rightView={
        <View className="flex-1 flex-row items-center justify-center gap-2 px-4">
          <Text variant="callout" className="ios:px-0 px-2 text-muted-foreground">
            {t('ai.anythingOutdoors')}
          </Text>
          <ChevronRight />
        </View>
      }
      testID="dashboard-tile-packrat-ai" // add this
      item={{
        title: t('ai.packratAI'),
      }}
      onPress={handlePress}
      target="Cell"
      index={0}
      removeSeparator={Platform.OS === 'ios'}
    />
  );
}

function ChevronRight() {
  const { colors } = useColorScheme();
  return <Icon name="chevron-right" size={17} color={colors.grey} />;
}
