...
                  </FormSection>
                )}

                {/* Pack Details Form - only show when creating new pack */}
                {!isAddingToExistingPack && (
                  <FormSection
                    ios={{ title: 'Pack Details' }}
                    footnote="Enter basic information for your new pack"
                  >
                    <form.Field name="packName">
                      {(field) => (
                        <FormItem>
                          <TextField
                            placeholder="Pack Name"
                            value={field.state.value || ''}
                            onBlur={field.handleBlur}
                            onChangeText={field.handleChange}
                            leftView={
                              <View className="ios:pl-2 justify-center pl-2">
                                <Icon name="backpack" size={16} color={colors.grey3} />
...
