...
export default function SettingsAndroidStyleScreen() {
  const insets = useSafeAreaInsets();
  return (
    <>
      {Platform.OS === 'ios' && (
        <LargeTitleHeader
          title="Settings"
          rightView={() => {
            return (
              <Avatar alt="NativeWindUI's avatar" className="h-8 w-8">
                <AvatarImage
                  source={{
                    uri: 'https://pbs.twimg.com/profile_images/1782428433898708992/1voyv4_A_400x400.jpg',
...
